Guess picture overflow fix

--- a/src/app/components/play-guess/play-guess.component.css
+++ b/src/app/components/play-guess/play-guess.component.css
@@ -3,5 +3,5 @@
 }
 
 img {
-    width: 75vw;
+    width: 65vw;
 }
